# Summarizer

./: .gitignore  CONTRIBUTING.md  PIVOT_WIDGET_VALIDATION.md  README.md  RELEASE.md  ROADMAP.md  STABILIZATION_PLAN.md  data_summarizer.py  metadata.txt  pyproject.toml  requirements-dev.txt  ui_main_dialog.py
.github/workflows/: python-package-conda.yml
cloud-api/: .env.example
docs/: fonts-Montserrat-placeholder.md  publishing-notes.md  repository-layout.md
plugin/: __init__.py
plugin/Summarizer/: CHANGELOG.md  README.md  __init__.py  browser_integration.py  cloud_dialogs.py  cloud_session.py  dashboard_add_dialog.py  dashboard_canvas.py  dashboard_item_widget.py  dashboard_models.py  dashboard_page_widget.py  dashboard_project_store.py  dashboard_widget.py  data_summarizer.py  export_manager.py  field_list_helpers.py  integration_panel.py  interactive_table.py  layout_nav.py  metadata.txt  model_interaction_manager.py  model_relations_popup.py  model_tab.py  palette.py  pivot_table_widget.py  quick_connect_dialogs.py  slim_dialogs.py  (+2 more)
report_view/: __init__.py  hybrid_query_interpreter.py  langchain_query_interpreter.py  layer_schema_service.py  operational_memory_service.py  operational_memory_store.py  query_interpreter.py  query_preprocessor.py  report_context_memory.py  report_executor.py  report_logging.py  reports_widget.py  result_models.py
scripts/: build_plugin_package.py  build_release.ps1  sync_qgis_plugin.cmd  sync_qgis_plugin.ps1
tests/: README.md  conftest.py  qgis_stubs.py  test_plugin_open_smoke.py  test_report_view_smoke.py
(+189 files in other folders)
