[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["plugin", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

